tests/baselines/reference/unusedParametersWithUnderscore(strict=true).errors.txt
unusedParametersWithUnderscore.ts(1,12): error TS6133: 'a' is declared but its value is never read.
unusedParametersWithUnderscore.ts(1,12): error TS7006: Parameter 'a' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(1,15): error TS7006: Parameter '_b' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(1,19): error TS6133: 'c' is declared but its value is never read.
unusedParametersWithUnderscore.ts(1,19): error TS7006: Parameter 'c' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(1,22): error TS7006: Parameter '___' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(1,27): error TS6133: 'd' is declared but its value is never read.
unusedParametersWithUnderscore.ts(1,27): error TS7006: Parameter 'd' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(1,29): error TS6133: 'e___' is declared but its value is never read.
unusedParametersWithUnderscore.ts(1,29): error TS7006: Parameter 'e___' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(1,35): error TS7006: Parameter '_f' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(5,13): error TS6198: All destructured elements are unused.
unusedParametersWithUnderscore.ts(5,14): error TS7031: Binding element '_a' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(5,18): error TS7031: Binding element '__b' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(8,14): error TS7031: Binding element '_a' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(8,19): error TS7031: Binding element '__b' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(11,13): error TS7019: Rest parameter 'arg' implicitly has an 'any[]' type.
unusedParametersWithUnderscore.ts(11,16): error TS6133: 'arg' is declared but its value is never read.
unusedParametersWithUnderscore.ts(14,13): error TS7019: Rest parameter '_arg' implicitly has an 'any[]' type.
unusedParametersWithUnderscore.ts(17,13): error TS6133: 'arg' is declared but its value is never read.
unusedParametersWithUnderscore.ts(17,13): error TS7006: Parameter 'arg' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(17,19): error TS7006: Parameter '_arg' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(20,10): error TS7006: Parameter '_' implicitly has an 'any' type.
unusedParametersWithUnderscore.ts(22,20): error TS7006: Parameter '_' implicitly has an 'any' type.


==== unusedParametersWithUnderscore.ts (24 errors) ====
    function f(a, _b, c, ___, d,e___, _f) {
               ~
!!! error TS6133: 'a' is declared but its value is never read.
               ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                  ~~
!!! error TS7006: Parameter '_b' implicitly has an 'any' type.
                      ~
!!! error TS6133: 'c' is declared but its value is never read.
                      ~
!!! error TS7006: Parameter 'c' implicitly has an 'any' type.
                         ~~~
!!! error TS7006: Parameter '___' implicitly has an 'any' type.
                              ~
!!! error TS6133: 'd' is declared but its value is never read.
                              ~
!!! error TS7006: Parameter 'd' implicitly has an 'any' type.
                                ~~~~
!!! error TS6133: 'e___' is declared but its value is never read.
                                ~~~~
!!! error TS7006: Parameter 'e___' implicitly has an 'any' type.
                                      ~~
!!! error TS7006: Parameter '_f' implicitly has an 'any' type.
    }
    
    
    function f2({_a, __b}) {
                ~~~~~~~~~
!!! error TS6198: All destructured elements are unused.
                 ~~
!!! error TS7031: Binding element '_a' implicitly has an 'any' type.
                     ~~~
!!! error TS7031: Binding element '__b' implicitly has an 'any' type.
    }
    
    function f3([_a, ,__b]) {
                 ~~
!!! error TS7031: Binding element '_a' implicitly has an 'any' type.
                      ~~~
!!! error TS7031: Binding element '__b' implicitly has an 'any' type.
    }
    
    function f4(...arg) {
                ~~~~~~
!!! error TS7019: Rest parameter 'arg' implicitly has an 'any[]' type.
                   ~~~
!!! error TS6133: 'arg' is declared but its value is never read.
    }
    
    function f5(..._arg) {
                ~~~~~~~
!!! error TS7019: Rest parameter '_arg' implicitly has an 'any[]' type.
    }
    
    function f6(arg?, _arg?) {
                ~~~
!!! error TS6133: 'arg' is declared but its value is never read.
                ~~~~
!!! error TS7006: Parameter 'arg' implicitly has an 'any' type.
                      ~~~~~
!!! error TS7006: Parameter '_arg' implicitly has an 'any' type.
    }
    
    var f7 = _ => undefined;
             ~
!!! error TS7006: Parameter '_' implicitly has an 'any' type.
    
    var f8 = function (_) { };
                       ~
!!! error TS7006: Parameter '_' implicitly has an 'any' type.